--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>sonar_test</groupId>
   <artifactId>com.sonar.maven</artifactId>
-  <version>2.0</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>com.sonar.maven</name>
@@ -12,9 +12,9 @@
   
   <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  <sonar.host.url>http://3.19.79.253:9000/</sonar.host.url>
+  <sonar.host.url>http://40.88.125.132:9000/</sonar.host.url>
   <sonar.login>admin</sonar.login>
-  <sonar.password>teju</sonar.password>
+  <sonar.password>admin123</sonar.password>
   </properties>
   
   <dependencies>
@@ -29,11 +29,11 @@
   <distributionManagement>
     <snapshotRepository>
        <id>nexus</id>
-       <url>http://3.14.152.247:8081/nexus/content/repositories/snapshots</url>
+       <url>http://40.88.125.132:8081/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
     <id>nexus</id>
-    <url>http://3.14.152.247:8081/nexus/content/repositories/releases</url>
+    <url>http://40.88.125.132:8081/nexus/content/repositories/releases</url>
   </repository>
   </distributionManagement>
 
